--- a/compress/package.json
+++ b/compress/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "rm -rf dist && NODE_ENV=development BUILD_MAIN=Compress rollup -w -c ../rollup.config.js",
-    "build": "rm -rf dist && NODE_ENV=production BUILD_MAIN=Compress rollup -c ../rollup.config.js"
+    "build": "rm -rf dist && NODE_ENV=production BUILD_MAIN=Compress rollup -c ../rollup.config.js",
+    "lint": "eslint src --ext .js"
   },
   "author": "Mincle",
   "license": "MIT"
